# libtime-c

./: .gitignore  CMakeLists.txt  README.md
include/: curr_time.h  time-c.h
src/: curr_time.c
tests/: CMakeLists.txt  test1.c
